batch astyle format .java files