@@ -1,9 +1,9 @@
 package net.i2p.router;
 /*
  * free (adj.): unencumbered; not under the control of others
- * Written by jrandom in 2003 and released into the public domain 
- * with no warranty of any kind, either expressed or implied.  
- * It probably won't make your computer catch on fire, or eat 
+ * Written by jrandom in 2003 and released into the public domain
+ * with no warranty of any kind, either expressed or implied.
+ * It probably won't make your computer catch on fire, or eat
  * your children, but it might.  Use at your own risk.
  *
  */
@@ -43,7 +43,7 @@ import net.i2p.util.SystemVersion;
 public class JobQueue {
     private final Log _log;
     private final RouterContext _context;
-    
+
     /** Integer (runnerId) to JobQueueRunner for created runners */
     private final Map<Integer, JobQueueRunner> _queueRunners;
     /** a counter to identify a job runner */
@@ -59,10 +59,10 @@ public class JobQueue {
     private volatile boolean _allowParallelOperation;
     /** have we been killed or are we alive? */
     private volatile boolean _alive;
-    
+
     private final Object _jobLock;
     private volatile long _nextPumperRun;
-    
+
     /** how many when we go parallel */
     private static final int RUNNERS;
     static {
@@ -79,45 +79,45 @@ public class JobQueue {
     private final static int DEFAULT_MAX_RUNNERS = 1;
     /** router.config parameter to override the max runners */
     private final static String PROP_MAX_RUNNERS = "router.maxJobRunners";
-    
+
     /** how frequently should we check and update the max runners */
     private final static long MAX_LIMIT_UPDATE_DELAY = 60*1000;
-    
+
     /** if a job is this lagged, spit out a warning, but keep going */
     private long _lagWarning = DEFAULT_LAG_WARNING;
     private final static long DEFAULT_LAG_WARNING = 5*1000;
     /** @deprecated unimplemented */
     @Deprecated
     private final static String PROP_LAG_WARNING = "router.jobLagWarning";
-    
+
     /** if a job is this lagged, the router is hosed, so spit out a warning (dont shut it down) */
     private long _lagFatal = DEFAULT_LAG_FATAL;
     private final static long DEFAULT_LAG_FATAL = 30*1000;
     /** @deprecated unimplemented */
     @Deprecated
     private final static String PROP_LAG_FATAL = "router.jobLagFatal";
-    
+
     /** if a job takes this long to run, spit out a warning, but keep going */
     private long _runWarning = DEFAULT_RUN_WARNING;
     private final static long DEFAULT_RUN_WARNING = 5*1000;
     /** @deprecated unimplemented */
     @Deprecated
     private final static String PROP_RUN_WARNING = "router.jobRunWarning";
-    
+
     /** if a job takes this long to run, the router is hosed, so spit out a warning (dont shut it down) */
     private long _runFatal = DEFAULT_RUN_FATAL;
     private final static long DEFAULT_RUN_FATAL = 30*1000;
     /** @deprecated unimplemented */
     @Deprecated
     private final static String PROP_RUN_FATAL = "router.jobRunFatal";
-    
+
     /** don't enforce fatal limits until the router has been up for this long */
     private long _warmupTime = DEFAULT_WARMUP_TIME;
     private final static long DEFAULT_WARMUP_TIME = 10*60*1000;
     /** @deprecated unimplemented */
     @Deprecated
     private final static String PROP_WARMUP_TIME = "router.jobWarmupTime";
-    
+
     /** max ready and waiting jobs before we start dropping 'em */
     private int _maxWaitingJobs = DEFAULT_MAX_WAITING_JOBS;
     private final static int DEFAULT_MAX_WAITING_JOBS = 25;
@@ -127,25 +127,25 @@ public class JobQueue {
     @Deprecated
     private final static String PROP_MAX_WAITING_JOBS = "router.maxWaitingJobs";
 
-    /** 
-     * queue runners wait on this whenever they're not doing anything, and 
+    /**
+     * queue runners wait on this whenever they're not doing anything, and
      * this gets notified *once* whenever there are ready jobs
      */
     private final Object _runnerLock = new Object();
-    
-    /** 
+
+    /**
      *  Does not start the pumper. Caller MUST call startup.
      */
     public JobQueue(RouterContext context) {
         _context = context;
         _log = context.logManager().getLog(JobQueue.class);
-        _context.statManager().createRateStat("jobQueue.readyJobs", 
-                                              "How many ready and waiting jobs there are?", 
-                                              "JobQueue", 
+        _context.statManager().createRateStat("jobQueue.readyJobs",
+                                              "How many ready and waiting jobs there are?",
+                                              "JobQueue",
                                               new long[] { 60*1000l, 60*60*1000l, 24*60*60*1000l });
-        _context.statManager().createRateStat("jobQueue.droppedJobs", 
-                                              "How many jobs do we drop due to insane overload?", 
-                                              "JobQueue", 
+        _context.statManager().createRateStat("jobQueue.droppedJobs",
+                                              "How many jobs do we drop due to insane overload?",
+                                              "JobQueue",
                                               new long[] { 60*1000l, 60*60*1000l, 24*60*60*1000l });
         _context.statManager().createRateStat("jobQueue.queuedJobs",
                                               "How many scheduled jobs are there?",
@@ -164,7 +164,7 @@ public class JobQueue {
         _jobStats = new ConcurrentHashMap<String,JobStats>();
         _pumper = new QueuePumper();
     }
-    
+
     /**
      * Enqueue the specified job
      *
@@ -218,13 +218,13 @@ public class JobQueue {
                 }
             }
         }
-        
+
         _context.statManager().addRateData("jobQueue.readyJobs", numReady);
         _context.statManager().addRateData("jobQueue.queuedJobs", _timedJobs.size());
         if (dropped) {
             _context.statManager().addRateData("jobQueue.droppedJobs", 1);
             if (_log.shouldLog(Log.WARN))
-                _log.warn("Dropping job due to overload!  # ready jobs: " 
+                _log.warn("Dropping job due to overload!  # ready jobs: "
                           + numReady + ": job = " + job);
             String key = job.getName();
             JobStats stats = _jobStats.get(key);
@@ -237,7 +237,7 @@ public class JobQueue {
             stats.jobDropped();
         }
     }
-    
+
     public void removeJob(Job job) {
         synchronized (_jobLock) {
             boolean removed = _timedJobs.remove(job);
@@ -246,7 +246,7 @@ public class JobQueue {
                 _readyJobs.remove(job);
         }
     }
-    
+
     /**
      * Returns <code>true</code> if a given job is waiting or running;
      * <code>false</code> if the job is finished or doesn't exist in the queue.
@@ -264,7 +264,7 @@ public class JobQueue {
                 return true;
         return false;
     }
-    
+
     /**
      *  @deprecated contention - see JobTiming.setStartAfter() comments
      */
@@ -274,27 +274,27 @@ public class JobQueue {
             _jobLock.notifyAll();
         }
     }
-    
-    public int getReadyCount() { 
-            return _readyJobs.size();
+
+    public int getReadyCount() {
+        return _readyJobs.size();
     }
 
-    public long getMaxLag() { 
-            // first job is the one that has been waiting the longest
-            Job j = _readyJobs.peek();
-            if (j == null) return 0;
-            JobTiming jt = j.getTiming();
-            // PoisonJob timing is null, prevent NPE at shutdown
-            if (jt == null)
-                return 0;
-            long startAfter = jt.getStartAfter();
-            return _context.clock().now() - startAfter;
+    public long getMaxLag() {
+        // first job is the one that has been waiting the longest
+        Job j = _readyJobs.peek();
+        if (j == null) return 0;
+        JobTiming jt = j.getTiming();
+        // PoisonJob timing is null, prevent NPE at shutdown
+        if (jt == null)
+            return 0;
+        long startAfter = jt.getStartAfter();
+        return _context.clock().now() - startAfter;
     }
-    
-    /** 
-     * are we so overloaded that we should drop the given job?  
+
+    /**
+     * are we so overloaded that we should drop the given job?
      * This is driven both by the numReady and waiting jobs, the type of job
-     * in question, and what the router's router.maxWaitingJobs config parameter 
+     * in question, and what the router's router.maxWaitingJobs config parameter
      * is set to.
      *
      */
@@ -306,7 +306,7 @@ public class JobQueue {
             // lets not try to drop too many tunnel messages...
             //if (cls == HandleTunnelMessageJob.class)
             //    return true;
-                
+
             // we don't really *need* to answer DB lookup messages
             // This is pretty lame, there's actually a ton of different jobs we
             // could drop, but is it worth making a list?
@@ -319,8 +319,8 @@ public class JobQueue {
             // Obviously we can only drop one-shot jobs, not those that requeue
             //
             if (cls == HandleFloodfillDatabaseLookupMessageJob.class ||
-                cls == HandleGarlicMessageJob.class ||
-                cls == IterativeSearchJob.class) {
+                    cls == HandleGarlicMessageJob.class ||
+                    cls == IterativeSearchJob.class) {
                 // this tail drops based on the lag at the tail, which
                 // makes no sense...
                 //JobTiming jt = job.getTiming();
@@ -337,13 +337,13 @@ public class JobQueue {
         }
         return false;
     }
-    
-    public void allowParallelOperation() { 
-        _allowParallelOperation = true; 
+
+    public void allowParallelOperation() {
+        _allowParallelOperation = true;
         runQueue(_context.getProperty(PROP_MAX_RUNNERS, RUNNERS));
     }
-    
-    /** 
+
+    /**
      *  Start the pumper.
      *  @since 0.9.19
      */
@@ -363,9 +363,9 @@ public class JobQueue {
             _jobLock.notifyAll();
         }
     }
-    
-    void shutdown() { 
-        _alive = false; 
+
+    void shutdown() {
+        _alive = false;
         synchronized (_jobLock) {
             _timedJobs.clear();
             _readyJobs.clear();
@@ -375,7 +375,7 @@ public class JobQueue {
         // so they must be stopped.
         Job poison = new PoisonJob();
         for (JobQueueRunner runner : _queueRunners.values()) {
-             runner.stopRunning();
+            runner.stopRunning();
             _readyJobs.offer(poison);
             // TODO interrupt thread for each runner
         }
@@ -383,80 +383,82 @@ public class JobQueue {
         _jobStats.clear();
         _runnerId.set(0);
 
-      /********
-        if (_log.shouldLog(Log.WARN)) {
-            StringBuilder buf = new StringBuilder(1024);
-            buf.append("current jobs: \n");
-            for (Iterator iter = _queueRunners.values().iterator(); iter.hasNext(); ) {
-                JobQueueRunner runner = iter.next();
-                Job j = runner.getCurrentJob();
+        /********
+          if (_log.shouldLog(Log.WARN)) {
+              StringBuilder buf = new StringBuilder(1024);
+              buf.append("current jobs: \n");
+              for (Iterator iter = _queueRunners.values().iterator(); iter.hasNext(); ) {
+                  JobQueueRunner runner = iter.next();
+                  Job j = runner.getCurrentJob();
 
-                buf.append("Runner ").append(runner.getRunnerId()).append(": ");
-                if (j == null) {
-                    buf.append("no current job ");
-                } else {
-                    buf.append(j.toString());
-                    buf.append(" started ").append(_context.clock().now() - j.getTiming().getActualStart());
-                    buf.append("ms ago");
-                }
+                  buf.append("Runner ").append(runner.getRunnerId()).append(": ");
+                  if (j == null) {
+                      buf.append("no current job ");
+                  } else {
+                      buf.append(j.toString());
+                      buf.append(" started ").append(_context.clock().now() - j.getTiming().getActualStart());
+                      buf.append("ms ago");
+                  }
 
-                j = runner.getLastJob();
-                if (j == null) {
-                    buf.append("no last job");
-                } else {
-                    buf.append(j.toString());
-                    buf.append(" started ").append(_context.clock().now() - j.getTiming().getActualStart());
-                    buf.append("ms ago and finished ");
-                    buf.append(_context.clock().now() - j.getTiming().getActualEnd());
-                    buf.append("ms ago");
-                }
-            }
-            buf.append("\nready jobs: ").append(_readyJobs.size()).append("\n\t");
-            for (int i = 0; i < _readyJobs.size(); i++) 
-                buf.append(_readyJobs.get(i).toString()).append("\n\t");
-            buf.append("\n\ntimed jobs: ").append(_timedJobs.size()).append("\n\t");
-            for (int i = 0; i < _timedJobs.size(); i++) 
-                buf.append(_timedJobs.get(i).toString()).append("\n\t");
-            _log.log(Log.WARN, buf.toString());
-        }
-      ********/
+                  j = runner.getLastJob();
+                  if (j == null) {
+                      buf.append("no last job");
+                  } else {
+                      buf.append(j.toString());
+                      buf.append(" started ").append(_context.clock().now() - j.getTiming().getActualStart());
+                      buf.append("ms ago and finished ");
+                      buf.append(_context.clock().now() - j.getTiming().getActualEnd());
+                      buf.append("ms ago");
+                  }
+              }
+              buf.append("\nready jobs: ").append(_readyJobs.size()).append("\n\t");
+              for (int i = 0; i < _readyJobs.size(); i++)
+                  buf.append(_readyJobs.get(i).toString()).append("\n\t");
+              buf.append("\n\ntimed jobs: ").append(_timedJobs.size()).append("\n\t");
+              for (int i = 0; i < _timedJobs.size(); i++)
+                  buf.append(_timedJobs.get(i).toString()).append("\n\t");
+              _log.log(Log.WARN, buf.toString());
+          }
+        ********/
     }
 
-    boolean isAlive() { return _alive; }
-    
+    boolean isAlive() {
+        return _alive;
+    }
+
     /**
      * When did the most recently begin job start?
      *
      * @since Broken before 0.9.51, always returned -1
      */
-    public long getLastJobBegin() { 
+    public long getLastJobBegin() {
         long when = -1;
         for (JobQueueRunner runner : _queueRunners.values()) {
             long cur = runner.getLastBegin();
             if (cur > when)
                 when = cur;
         }
-        return when; 
+        return when;
     }
     /**
      * When did the most recently begin job start?
      *
      * @since Broken before 0.9.51, always returned -1
      */
-    public long getLastJobEnd() { 
+    public long getLastJobEnd() {
         long when = -1;
         for (JobQueueRunner runner : _queueRunners.values()) {
             long cur = runner.getLastEnd();
             if (cur > when)
                 when = cur;
         }
-        return when; 
+        return when;
     }
-    /** 
+    /**
      * retrieve the most recently begin and still currently active job, or null if
      * no jobs are running
      */
-    public Job getLastJob() { 
+    public Job getLastJob() {
         Job j = null;
         long when = -1;
         for (JobQueueRunner cur : _queueRunners.values()) {
@@ -467,7 +469,7 @@ public class JobQueue {
         }
         return j;
     }
-    
+
     /**
      * Blocking call to retrieve the next ready job
      *
@@ -485,55 +487,57 @@ public class JobQueue {
             _log.warn("No longer alive, returning null");
         return null;
     }
-    
+
     /**
      * Start up the queue with the specified number of concurrent processors.
-     * If this method has already been called, it will increase the number of 
+     * If this method has already been called, it will increase the number of
      * runners if necessary.  This does not ever stop or reduce threads.
      */
     public synchronized void runQueue(int numThreads) {
-            // we're still starting up [serially] and we've got at least one runner,
-            // so dont do anything
-            if ( (!_queueRunners.isEmpty()) && (!_allowParallelOperation) ) return;
+        // we're still starting up [serially] and we've got at least one runner,
+        // so dont do anything
+        if ( (!_queueRunners.isEmpty()) && (!_allowParallelOperation) ) return;
 
-            // we've already enabled parallel operation, so grow to however many are
-            // specified
-            if (_queueRunners.size() < numThreads) {
-                if (_log.shouldLog(Log.INFO))
-                    _log.info("Increasing the number of queue runners from " 
-                              + _queueRunners.size() + " to " + numThreads);
-                for (int i = _queueRunners.size(); i < numThreads; i++) {
-                    JobQueueRunner runner = new JobQueueRunner(_context, i);
-                    _queueRunners.put(Integer.valueOf(i), runner);
-                    runner.setName("JobQueue " + _runnerId.incrementAndGet() + '/' + numThreads);
-                    runner.start();
-                }
-            } else if (_queueRunners.size() == numThreads) {
-                //for (JobQueueRunner runner : _queueRunners.values()) {
-                //    runner.startRunning();
-                //}
-                if (_log.shouldWarn())
-                    _log.warn("Already have " + numThreads + " threads");
-            } else { // numThreads < # runners, so shrink
-                //for (int i = _queueRunners.size(); i > numThreads; i++) {
-                //     QueueRunner runner = (QueueRunner)_queueRunners.get(new Integer(i));
-                //     runner.stopRunning();
-                //}
-                if (_log.shouldWarn())
-                    _log.warn("Already have " + _queueRunners.size() + " threads, not decreasing");
+        // we've already enabled parallel operation, so grow to however many are
+        // specified
+        if (_queueRunners.size() < numThreads) {
+            if (_log.shouldLog(Log.INFO))
+                _log.info("Increasing the number of queue runners from "
+                          + _queueRunners.size() + " to " + numThreads);
+            for (int i = _queueRunners.size(); i < numThreads; i++) {
+                JobQueueRunner runner = new JobQueueRunner(_context, i);
+                _queueRunners.put(Integer.valueOf(i), runner);
+                runner.setName("JobQueue " + _runnerId.incrementAndGet() + '/' + numThreads);
+                runner.start();
             }
+        } else if (_queueRunners.size() == numThreads) {
+            //for (JobQueueRunner runner : _queueRunners.values()) {
+            //    runner.startRunning();
+            //}
+            if (_log.shouldWarn())
+                _log.warn("Already have " + numThreads + " threads");
+        } else { // numThreads < # runners, so shrink
+            //for (int i = _queueRunners.size(); i > numThreads; i++) {
+            //     QueueRunner runner = (QueueRunner)_queueRunners.get(new Integer(i));
+            //     runner.stopRunning();
+            //}
+            if (_log.shouldWarn())
+                _log.warn("Already have " + _queueRunners.size() + " threads, not decreasing");
+        }
     }
-        
-    void removeRunner(int id) { _queueRunners.remove(Integer.valueOf(id)); }
-    
+
+    void removeRunner(int id) {
+        _queueRunners.remove(Integer.valueOf(id));
+    }
+
     /**
-     * Responsible for moving jobs from the timed queue to the ready queue, 
-     * adjusting the number of queue runners, as well as periodically updating the 
+     * Responsible for moving jobs from the timed queue to the ready queue,
+     * adjusting the number of queue runners, as well as periodically updating the
      * max number of runners.
      *
      */
     private final class QueuePumper implements Runnable, Clock.ClockUpdateListener, RouterClock.ClockShiftListener {
-        public QueuePumper() { 
+        public QueuePumper() {
             _context.clock().addUpdateListener(this);
             ((RouterClock) _context.clock()).addShiftListener(this);
         }
@@ -553,7 +557,7 @@ public class JobQueue {
                                 long timeLeft = j.getTiming().getStartAfter() - now;
                                 if (lastJob != null && lastTime > j.getTiming().getStartAfter()) {
                                     _log.error("Job " + lastJob + " out of order with job " + j +
-                                             " difference of " + DataHelper.formatDuration(lastTime - j.getTiming().getStartAfter()));
+                                               " difference of " + DataHelper.formatDuration(lastTime - j.getTiming().getStartAfter()));
                                 }
                                 lastJob = j;
                                 lastTime = lastJob.getTiming().getStartAfter();
@@ -572,37 +576,37 @@ public class JobQueue {
                                     // calling addJob(), could clog the whole queue forever.
                                     // Hopefully nobody does that, and as a backup, we hope
                                     // that the TreeSet will eventually resort it from other addJob() calls.
-                                        timeToWait = timeLeft;
+                                    timeToWait = timeLeft;
 
                                     // failsafe - remove and re-add, peek at the next job,
                                     // break and go around again
                                     if (timeToWait > 10*1000 && iter.hasNext()) {
                                         if (_log.shouldLog(Log.INFO))
                                             _log.info("Failsafe re-sort job " + j +
-                                                " with delay " + DataHelper.formatDuration(timeToWait));
+                                                      " with delay " + DataHelper.formatDuration(timeToWait));
                                         iter.remove();
                                         Job nextJob = iter.next();
                                         _timedJobs.add(j);
                                         long nextTimeLeft = nextJob.getTiming().getStartAfter() - now;
                                         if (timeToWait > nextTimeLeft) {
                                             _log.error("Job " + j + " out of order with job " + nextJob +
-                                                " difference of " + DataHelper.formatDuration(timeToWait - nextTimeLeft));
+                                                       " difference of " + DataHelper.formatDuration(timeToWait - nextTimeLeft));
                                             timeToWait = Math.max(10, nextTimeLeft);
                                         }
                                     }
                                     break;
                                 }
                             }
-                                if (timeToWait < 0)
-                                    timeToWait = 1000;
-                                else if (timeToWait < 10)
-                                    timeToWait = 10;
-                                else if (timeToWait > 10*1000)
-                                    timeToWait = 10*1000;
-                                //if (_log.shouldLog(Log.DEBUG))
-                                //    _log.debug("Waiting " + timeToWait + " before rechecking the timed queue");
-                                _nextPumperRun = _context.clock().now() + timeToWait;
-                                _jobLock.wait(timeToWait);
+                            if (timeToWait < 0)
+                                timeToWait = 1000;
+                            else if (timeToWait < 10)
+                                timeToWait = 10;
+                            else if (timeToWait > 10*1000)
+                                timeToWait = 10*1000;
+                            //if (_log.shouldLog(Log.DEBUG))
+                            //    _log.debug("Waiting " + timeToWait + " before rechecking the timed queue");
+                            _nextPumperRun = _context.clock().now() + timeToWait;
+                            _jobLock.wait(timeToWait);
                         } // synchronize (_jobLock)
                     } catch (InterruptedException ie) {}
                 } // while (_alive)
@@ -639,7 +643,7 @@ public class JobQueue {
         }
 
     }
-    
+
     /**
      * Update the clock data for all jobs in process or scheduled for
      * completion.
@@ -661,12 +665,12 @@ public class JobQueue {
             }
         }
     }
-    
+
     /**
      * calculate and update the job timings
      * if it was lagged too much or took too long to run, spit out
      * a warning (and if its really excessive, kill the router)
-     */ 
+     */
     void updateStats(Job job, long doStart, long origStartAfter, long duration) {
         if (_context.router() == null) return;
         String key = job.getName();
@@ -676,7 +680,7 @@ public class JobQueue {
 
         if (lag < 0) lag = 0;
         if (duration < 0) duration = 0;
-        
+
         JobStats stats = _jobStats.get(key);
         if (stats == null) {
             stats = new JobStats(key);
@@ -710,7 +714,7 @@ public class JobQueue {
             //Router.getInstance().shutdown();
             return;
         }
-        
+
         if ( (uptime > _warmupTime) && (duration > _runFatal) ) {
             // slow CPUs can get hosed with ElGamal, but 10s is too much.
             if (_log.shouldLog(Log.WARN))
@@ -720,19 +724,27 @@ public class JobQueue {
             return;
         }
     }
-    
-        
+
+
     /** job ID counter changed from int to long so it won't wrap negative */
     private static final int POISON_ID = -99999;
 
     private static class PoisonJob implements Job {
-        public String getName() { return null; }
-        public long getJobId() { return POISON_ID; }
-        public JobTiming getTiming() { return null; }
+        public String getName() {
+            return null;
+        }
+        public long getJobId() {
+            return POISON_ID;
+        }
+        public JobTiming getTiming() {
+            return null;
+        }
         public void runJob() {}
 
         @SuppressWarnings("deprecation")
-        public Exception getAddedBy() { return null; }
+        public Exception getAddedBy() {
+            return null;
+        }
 
         public void dropped() {}
     }
@@ -743,24 +755,24 @@ public class JobQueue {
      *  @since 0.8.9
      */
     private static class JobComparator implements Comparator<Job>, Serializable {
-         public int compare(Job l, Job r) {
-             // equals first, Jobs generally don't override so this should be fast
-             // And this MUST be first so we can remove a job even if its timing has changed.
-             if (l.equals(r))
-                 return 0;
-             // This is for _timedJobs, which always have a JobTiming.
-             // PoisonJob only goes in _readyJobs.
-             long ld = l.getTiming().getStartAfter() - r.getTiming().getStartAfter();
-             if (ld < 0)
-                 return -1;
-             if (ld > 0)
-                 return 1;
-             ld = l.getJobId() - r.getJobId();
-             if (ld < 0)
-                 return -1;
-             if (ld > 0)
-                 return 1;
-             return l.hashCode() - r.hashCode();
+        public int compare(Job l, Job r) {
+            // equals first, Jobs generally don't override so this should be fast
+            // And this MUST be first so we can remove a job even if its timing has changed.
+            if (l.equals(r))
+                return 0;
+            // This is for _timedJobs, which always have a JobTiming.
+            // PoisonJob only goes in _readyJobs.
+            long ld = l.getTiming().getStartAfter() - r.getTiming().getStartAfter();
+            if (ld < 0)
+                return -1;
+            if (ld > 0)
+                return 1;
+            ld = l.getJobId() - r.getJobId();
+            if (ld < 0)
+                return -1;
+            if (ld > 0)
+                return 1;
+            return l.hashCode() - r.hashCode();
         }
     }
 
@@ -788,7 +800,7 @@ public class JobQueue {
             }
         }
         synchronized (_jobLock) {
-            readyJobs.addAll(_readyJobs); 
+            readyJobs.addAll(_readyJobs);
             timedJobs.addAll(_timedJobs);
         }
         return _queueRunners.size();
